# sfml-game-boilerplate

./: .gitignore  CMakeLists.txt  main.cpp  readme.md
Infrastructure/: Game.cpp  Game.h  GameEntity.cpp  GameEntity.h  ResourceHolder.cpp
include/Domain/World/: Keys.h
include/Domain/World/Entities/: Aircraft.h
include/Infrastructure/: Game.h  GameEntity.h  ResourceHolder.h  SceneNode.h
src/Domain/World/Entities/: Aircraft.cpp
src/Infrastructure/: Game.cpp  GameEntity.cpp  ResourceHolder.cpp  SceneNode.cpp
